# ttrpg-collector-feeder

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml
assets/: generate_voices.sh
scripts/: encode-opus.sh  inject-session.py  verify-capture.py  verify-timeline.py
src/: audio.rs  control.rs  error.rs  lib.rs  main.rs  state.rs
tests/: http_contract.rs
